--- a/en/倩/倩.11043.wikitext
+++ b/en/倩/倩.11043.wikitext
@@ -11,12 +11,30 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[sin3]], [[sin6]]|y=sin3, sin6}}
+===Pronunciation===
+{{zh-pron
+|m=qiàn
+|c=sin6,cing3,sin3
+|h=pfs=
+|md=
+|mn=chhiàⁿ
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人08}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}} <!--normal meanings-->
+# {{lb|zh|Teochew}} please, excusing oneself. Example: 倩食 (cia'2 ziah8) is a very polite way of asking people to eat.
+
+====References====
+* [http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=5730&curpage=1&sample=%E5%80%A9&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=2 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
@@ -38,27 +56,6 @@
 {{ko-hanja|hangeul=천|rv=cheon|mr=ch'ŏn|y=chen}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qiàn]] ([[qian4]])|wg=ch'ien<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
-
-----
-
-==Min Nan==
-
-===Hanzi===
-{{nan-hanzi|poj=chhiàⁿ (chhiaⁿ<sup>3</sup>)|tlpa=tshiànn (tshiann<sup>3</sup>)}}
-
-# (''Teochew'') please, excusing oneself. Example: 倩食 (cia'2 ziah8) is a very polite way of asking people to eat.
-
-====References====
-* [http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=5730&curpage=1&sample=%E5%80%A9&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=2 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
