--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|es|en}} and {{etyl|fr|en}} {{m|es|libre||[[free]], having liberty, at liberty}}
+From {{etyl|fr|en}} and {{etyl|es|en}} {{m|fr|libre||[[free]], having liberty, at liberty}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈliː.bɹə/|lang=en}}
