--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -5,6 +5,7 @@
 From {{etyl|fr|en}} and {{etyl|es|en}} {{m|fr|libre||[[free]], having liberty, at liberty}}.
 
 ===Pronunciation===
+The pronunciation is near from French one.
 * {{a|UK}} {{IPA|/ˈliː.bɹə/|lang=en}}
 * {{homophones|lang=en|Libra}}
 * {{a|US}} {{IPA|/ˈli.bɹə/|/ˈli.bɹeɪ/|lang=en}}
