--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -24,7 +24,7 @@ From {{etyl|enm|en}} {{m|enm|finden}}, from {{etyl|ang|en}} {{m|ang|findan}}, fr
 #* {{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}|title={{w|The Celebrity}}|chapter=2|passage=I had occasion […] to make a somewhat long business trip to Chicago, and on my return […] I '''found''' Farrar awaiting me in the railway station. He smiled his wonted fraction by way of greeting, […], and finally leading me to his buggy, turned and drove out of town.}}
 #* {{quote-book|year=1918|author={{w|W. B. Maxwell}}|chapter=10|title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]|passage=
 It was a joy to snatch some brief respite, and '''find''' himself in the rectory drawing–room. Listening here was as pleasant as talking; just to watch was pleasant.}}
-#* {{quote-news|year=2011|date=January 25|author=Paul Fletcher|work=BBC|title=[http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm Arsenal 3-0 Ipswich (agg. 3-1)]|passage=
+#* {{quote-news|date=January 25, 2011|author=Paul Fletcher|work=BBC|title=[http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm Arsenal 3-0 Ipswich (agg. 3-1)]|passage=
 Van Persie scored a hat-trick against Wigan on Saturday and should have '''found''' the net again after Bendtner '''found''' him at the far post but the Dutchman's header rebounded to safety off the crossbar.}}
 #* {{quote-magazine|date=2013-07-20|volume=408|issue=8845|magazine={{w|The Economist}}|title=[http://www.economist.com/news/science-and-technology/21581981-what-pollution-some-opportunity-others-welcome-plastisphere Welcome to the plastisphere]|passage=
 Plastics are energy-rich substances, which is why many of them burn so readily. Any organism that could unlock and use that energy would do well in the Anthropocene. Terrestrial bacteria and fungi which can manage this trick are already familiar to experts in the field. Dr Mincer and Dr Amaral-Zettler '''found''' evidence of them on their marine plastic, too.}}
