--- a/en/型/型.13070.wikitext
+++ b/en/型/型.13070.wikitext
@@ -18,12 +18,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=jing4|y=ying4}}
+===Pronunciation===
+{{zh-pron
+|m=xíng
+|c=jing4
+|h=pfs=
+|md=
+|mn=hêng
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土06}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -57,15 +71,6 @@
 {{ko-hanja|hangeul=형|rv=hyeong|mr=hyŏng}}
 
 # {{defn|lang=ko|sort=土06}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xíng]] ([[xing2]])|wg=hsing<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
 
 ----
 
