--- a/en/偏/偏.11103.wikitext
+++ b/en/偏/偏.11103.wikitext
@@ -11,12 +11,31 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=pin1|y=pin1}}
+===Pronunciation===
+{{zh-pron
+|m=piān
+|c=pin1
+|h=pfs=phiên
+|md=
+|mn=
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+====Derived terms====
+* {{zh-l|偏頭痛}}
+* {{zh-l|偏見|bias}}
+* {{zh-l|偏偏}}
 
 ----
 
@@ -87,26 +106,6 @@
 {{ko-hanja|hangeul=[[편]]|rv=pyeon|mr=p'yŏn}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[piān]] ([[pian1]])|wg=p'ien<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
-
-====Compounds====
-* [[偏頭痛]] ([[偏头痛]])
-* [[偏见]] ([[偏見]]) bias
-
-----
-
-==Middle Chinese==
-
-===Han character===
-'''偏''' (piɛn)
 
 ----
 
