--- a/en/傍/傍.11165.wikitext
+++ b/en/傍/傍.11165.wikitext
@@ -10,12 +10,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[bong6]], [[pong4]], [[pong6]]|y=bong6, pong4, pong6}}
+===Pronunciation===
+{{zh-pron
+|m=bàng
+|c=pong4,bong6
+|h=pfs=
+|md=
+|mn=pn̄g
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -42,15 +56,6 @@
 {{ko-hanja|hangeul=[[방]], [[팽]]|rv=bang, paeng|mr=pang, p'aeng}}
 
 # {{defn|lang=ko|sort=人10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[bàng]] ([[bang4]])|wg=pang<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
 
 ----
 
