--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -421,7 +421,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 # {{lb|en|transitive|slang}} To [[dilute]] a liquid, usually [[alcohol]].
 #: {{ux|en|The bartender '''cuts''' his beer to save money and now it's all watery.}}
 # {{lb|en|transitive}} To exhibit (a quality). <!--needs improving: you don't cut a quality, but a figure-->
-#* {{quote-news|year=2011|date=January 25|author=Paul Fletcher|work=BBC
+#* {{quote-news|date=January 25, 2011|author=Paul Fletcher|work=BBC
 |title=[http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm Arsenal 3-0 Ipswich (agg. 3-1)]
 |passage=Arsenal were starting to work up a head of steam and Tractor Boys boss Paul Jewell '''cut''' an increasingly frustrated figure on the touchline.}}
 # {{lb|en|transitive}} To [[stop]] or [[disengage]].
