--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -267,7 +267,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Tamil: {{t|ta|ஜர்மனி}}
 * Tatar: {{t|tt|Алмания|sc=Cyrl}}
 * Telugu: {{t+|te|జర్మని}}
-* Thai: {{t+|th|ประเทศเยอรมนี|tr=bprà-têet yəə-rá-má-nii}}
+* Thai: {{t+|th|ประเทศเยอรมนี|tr=bprà-têet yəə-rá-má-nii}}, {{t+|th|เยอรมนี|tr=yəə-rá-má-nii|sc=Thai}}
 * Tibetan: {{t|bo|འཇར་མན།|sc=Tibt}}
 * Tigrinya: {{t|ti|ጀርመን|sc=Ethi}}
 * Turkish: {{t+|tr|Almanya}}
