--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -110,7 +110,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Lithuanian: {{t|lt|kautis}}, {{t+|lt|muštis}}, {{t|lt|peštis}}, {{t|lt|grumtis}}
 * Macedonian: {{t|mk|бори|impf|alt=се бори|sc=Cyrl}}
 * Maltese: {{t|mt|ġlieda}}
-* Mongolian: {{t-needed|mn}}
+* Mongolian: {{t+|mn|тэмцэх|sc=Cyrl}}
 * Norman: {{t|nrf|freûler|alt=s'freûler}} {{qualifier|Jersey}}
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|stridj}}
 * Norwegian: {{t+|no|slåss}}, {{t|no|kjempe}}
@@ -215,6 +215,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Latin: {{t|la|combattuo}}
 * Latvian: {{t+|lv|cīnīties}}
 * Lithuanian: {{t+|lt|kovoti}}, {{t|lt|kautis}}
+* Mongolian: {{t+|mn|тэмцэх|sc=Cyrl}}
 * Norwegian: {{t+|no|slåss}}
 * Occitan: {{t+|oc|batre}}
 * Old French: {{t|fro|batre}}, {{t|fro|cumbatre}}
