--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -215,7 +215,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Latin: {{t|la|combattuo}}
 * Latvian: {{t+|lv|cīnīties}}
 * Lithuanian: {{t+|lt|kovoti}}, {{t|lt|kautis}}
-* Mongolian: {{t+|mn|тэмцэх|sc=Cyrl}}
+* Mongolian: {{t+|mn|тэмцэх|sc=Cyrl}}, {{t+|mn|байлдах|sc=Cyrl}}
 * Norwegian: {{t+|no|slåss}}
 * Occitan: {{t+|oc|batre}}
 * Old French: {{t|fro|batre}}, {{t|fro|cumbatre}}
