--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -174,6 +174,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Romanian: {{t+|ro|Israel|m}}
 * Russian: {{t+|ru|Изра́иль|m}}, {{t+|ru|Израи́л|m}}, {{t|ru|Исраэ́ль|m}}
 * Spanish: {{t+|es|Israel|m}}
+* Thai: {{t+|th|อิสราเอล|tr=ìs-raa-eeo|sc=Thai}}
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
 {{trans-bottom}}
 
@@ -183,6 +184,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 {{trans-mid}}
 * Judeo-Arabic: {{t|jrb|אסראיל|m|tr=ʾisrāʾīl}}
 * Portuguese: {{t+|pt|Israel|m}}
+* Thai: {{t+|th|อิสราเอล|tr=ìs-raa-eeo|sc=Thai}}
 * Yiddish: {{t|yi|ישׂראל|m|tr=yisroel|sc=Hebr}}
 {{trans-bottom}}
 
