--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -111,7 +111,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Tarantino: {{t|roa-tar|celóne}}
 * Telugu: {{qualifier|tortoise or turtle}} {{t+|te|తాబేలు|tr=tābēlu|sc=Telu}}
 * Thai: {{qualifier|tortoise or turtle}} {{t+|th|เต่า|tr=tàò|sc=Thai}}
-* Tswana: {{t|tn|khudu}} (9/10)
+* Tswana: {{t|tn|khudu|c9|c10}}
 * Turkish: {{t+|tr|kaplumbağa}}, {{t+|tr|tosbağa}}
 * Turkmen: {{qualifier|tortoise or turtle}} {{t|tk|pyşbaga}}
 * Ukrainian: {{qualifier|tortoise or turtle}} {{t|uk|черепаха|f|tr=čerepáxa}}
