--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -38,7 +38,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Bengali: {{qualifier|tortoise or turtle}} {{t|bn|কাছিম|tr=kachim|sc=Beng}}
 * Breton: {{t+|br|baot|f}}, {{t|br|baoted|p}}, {{t|br|baot douar}}
 * Bulgarian: {{qualifier|tortoise or turtle}} {{t+|bg|костенурка|f|tr=kostenúrka}}
-* Burmese: {{qualifier|tortoise or turtle}} {{t+|my|လိပ်|tr=leik|sc=Mymr}}
+* Burmese: {{qualifier|tortoise or turtle}} {{t+|my|လိပ်|sc=Mymr}}
 * Catalan: {{t+|ca|tortuga|f}}
 * Central Melanau: {{t|mel|kejaa}}
 * Chinese:
@@ -66,13 +66,13 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Italian: {{qualifier|tortoise or turtle}} {{t+|it|tartaruga|f}}, {{t+|it|testuggine|f}}
 * Japanese: {{qualifier|tortoise or turtle}} {{t+|ja|亀|tr=[[かめ]], kame|sc=Jpan}}, {{t|ja|カメ|tr=kame|sc=Jpan}}, {{t+|ja|陸亀|tr=りくがめ, rikugame|sc=Jpan}}
 * Norman: {{t|nrf|tortue|f}}
-* Kannada: {{t+|kn|ಆಮೆ|tr=āme|sc=Knda}}, {{t+|kn|ಕೂರ್ಮ|tr=kūrma|sc=Knda}}
-* Kazakh: {{qualifier|tortoise or turtle}} {{t|kk|тасбақа|tr=tasbaqa|sc=Cyrl}}
+* Kannada: {{t+|kn|ಆಮೆ|sc=Knda}}, {{t+|kn|ಕೂರ್ಮ|sc=Knda}}
+* Kazakh: {{qualifier|tortoise or turtle}} {{t|kk|тасбақа|sc=Cyrl}}
 * Khmer: {{t+|km|អណ្ដើក|tr=ɑndaək|sc=Khmr}}
 * Kimaragang: {{t|kqr|landang}}
 * Korean: {{qualifier|tortoise or turtle}} {{t+|ko|거북|sc=Kore}}, {{t+|ko|거북이|sc=Kore}}
-* Kyrgyz: {{qualifier|tortoise or turtle}} {{t+|ky|ташбака|tr=tašbaka|sc=Cyrl}}
-* Lao: {{qualifier|tortoise or turtle}} {{t+|lo|ເຕົ່າ|tr=tao|sc=Laoo}}
+* Kyrgyz: {{qualifier|tortoise or turtle}} {{t+|ky|ташбака|sc=Cyrl}}
+* Lao: {{qualifier|tortoise or turtle}} {{t+|lo|ເຕົ່າ|sc=Laoo}}
 {{trans-mid}}
 * Latin: {{t+|la|testudo|m}}
 * Latvian: {{qualifier|tortoise or turtle}} {{t+|lv|bruņurupucis|m}}
@@ -80,7 +80,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Luxembourgish: {{t|lb|Landdeckelsmouk|f}}
 * Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f|tr=žélka}}
 * Malay: {{t|ms|kura-kura}}
-* Malayalam: {{t+|ml|ആമ|tr=āma|sc=Mlym}}
+* Malayalam: {{t+|ml|ആമ|sc=Mlym}}
 * Maltese: {{t|mt|fekruna|f}}, {{t|mt|fkieren|p}}
 * Maori: {{t|mi|honuwhenua}}
 * Nahuatl: {{t|nah|āyotl}}
@@ -106,10 +106,10 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Swedish: {{t+|sv|sköldpadda}}
 * Tagal Murut: {{t|mvv|buu}}, {{t|mvv|babag}}
 * Tagalog: {{t|tl|pagong}}
-* Tajik: {{qualifier|tortoise or turtle}} {{t|tg|сангпушт|tr=sangpušt|sc=Cyrl}}
-* Tamil: {{t+|ta|ஓடன்|tr=ōṭaṉ|sc=Taml}}, {{t+|ta|ஆமை|tr=āmai|sc=Taml}}
+* Tajik: {{qualifier|tortoise or turtle}} {{t|tg|сангпушт|sc=Cyrl}}
+* Tamil: {{t+|ta|ஓடன்|sc=Taml}}, {{t+|ta|ஆமை|sc=Taml}}
 * Tarantino: {{t|roa-tar|celóne}}
-* Telugu: {{qualifier|tortoise or turtle}} {{t+|te|తాబేలు|tr=tābēlu|sc=Telu}}
+* Telugu: {{qualifier|tortoise or turtle}} {{t+|te|తాబేలు|sc=Telu}}
 * Thai: {{qualifier|tortoise or turtle}} {{t+|th|เต่า|tr=tàò|sc=Thai}}
 * Tswana: {{t|tn|khudu|c9|c10}}
 * Turkish: {{t+|tr|kaplumbağa}}, {{t+|tr|tosbağa}}
