--- a/en/惢/惢.15607.wikitext
+++ b/en/惢/惢.15607.wikitext
@@ -3,9 +3,10 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=12|four=33330|canj=PPP|ids=⿱心⿰心心}}
 
-# {{defn|Han|sort=心08}}
-# to be [[puzzled]]
+# [[doubt]]
 # to be [[good]]
+# [[puzzled]]
+# {{context|archaic|lang=zh}} [[unopened]] [[flower]]s, flower [[bud]]s
 
 ====References====
 * {{Han ref|kx=0391.270|dkj=10826|dj=0727.030|hdz=42312.080|uh=60E2|ud=24802|bh=D8FB|bd=55547}}
