--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -24,7 +24,7 @@ Two pieces of flesh ([[仌]]) left to dry in the sun ([[日]]).
 
 ===Pronunciation===
 {{zh-pron
-|m=xī,cuò
+|m=昔,cuò
 |c=sik1
 |mn=sek
 |mc=y
@@ -32,6 +32,11 @@ Two pieces of flesh ([[仌]]) left to dry in the sun ([[日]]).
 |ma=
 |cat=adv,a
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ====References====
 * (''Min Nan'') [http://twblg.dict.edu.tw/holodict_new/index.html Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
