--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -7,7 +7,7 @@ From {{etyl|sem-pro|he}} {{m|sem-pro|*ʾarṣ́-}}. Compare {{etyl|ar|-}} {{m|ar
 * {{a|IL}} {{IPA|/ˈeret͡s/|lang=he}}
 
 ===Noun===
-{{he-noun|g=f|tr='érets|wv=אֶרֶץ|pl=אֲרָצוֹת|cons=אֶרֶץ|plcons=אַרְצוֹת|pausal=אָרֶץ}}
+{{he-noun|g=f|tr='érets|wv=אֶרֶץ|pl=אֲרָצוֹת|cons=אֶרֶץ|plcons=אַרְצוֹת|pausal=אָרֶץ|pat=קֶטֶל}}
 
 # [[country]], [[land]]
 # [[territory]], [[district]], [[region]]
