--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -156,7 +156,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Georgian: {{t|ka|ნარწყევი}}, {{t|ka|ნაღებინები}}
 * German: {{t+|de|Kotze|f}}, {{t+|de|Erbrochenes}}
 * Greek: {{t+|el|έμεσμα|n}}, {{t+|el|εμετός|m}}
-* Hebrew: {{t|he|קא|tr=kei}}
+* Hebrew: {{t|he|קיא|tr=kí}}
 * Hungarian: {{t+|hu|hányás}}, {{t|hu|hányadék}}
 * Irish: {{t|ga|aiseag|m}}, {{t|ga|bréitse|m}}, {{t|ga|cur|m}}, {{t|ga|múisc|f}}, {{t|ga|orla|m}}, {{t|ga|sceathrach|f}}, {{t|ga|sceith|f}}, {{t|ga|urlacan|m}}
 * Italian: {{t+|it|vomito|m}}
