--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -194,6 +194,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 
 {{trans-top|the act of vomiting}}
 * Georgian: {{t|ka|პირღებინება}}, {{t|ka|ჩანჩქერო}}, {{t+|ka|ღებინება}}, {{t|ka|რწყევა}}
+* Hebrew: {{t+|he|הֲקָאָה|f|tr=haka'á}}
 * Irish: {{t|ga|orla|m}}, {{t|ga|sceathrach|f}}, {{t|ga|taoisceáil|f}}, {{t|ga|tonntaoscadh|m}} {{qualifier|sudden}}, {{t|ga|urlacan|m}}
 * Kazakh: {{t|kk|лоқсу|sc=Cyrl}}
 {{trans-mid}}
