--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -67,7 +67,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Greek: {{t+|el|εξεμώ}}, {{t|el|[[κάνω]] [[εμετό]]}}, {{t+|el|ξερνώ}} {{qualifier|colloquial}}
 *: Ancient: {{t|grc|ἐμέω}}, {{t|grc|ἐξεμέω}}
 * Greenlandic: {{t|kl|meriarpoq}}
-* Hebrew: {{t|he|הקיא|tr=hekí}}
+* Hebrew: {{t|he|הֵקִיא|tr=hekí}}
 * Hindi: {{t|hi|उल्टी करना|tr=ulṭī karnā|sc=Deva}}, {{t|hi|वमन करना|tr=vaman karnā|sc=Deva}}
 * Hungarian: {{t+|hu|hány}}
 * Icelandic: {{t+|is|æla}}, {{t|is|gubba}}, {{t|is|spúa}}, {{t+|is|spýja}}, {{t|is|kasta upp}}
