--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -15,7 +15,7 @@
 ==Chinese==
 {{zh-forms}}
 
-===Etmyology 1===
+===Pronunciation===
 {{zh-pron
 |m=dì
 |c=dei6,deng6
@@ -39,7 +39,7 @@
 # [[land]]
 # {{label|zh|Cantonese}} (={{zh-l|嘅}}), a less common plurality marker
 
-===Etmyology 2===
+===Pronunciation===
 {{zh-pron
 |m=de,di
 |m_note=di is used in poetry, songs
