--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -35,7 +35,7 @@
 
 # [[evil]], [[wicked]], [[mean]], [[bad]], [[foul]]
 #: {{zh-l|惡毒|èdú|malicious}}
-#: {{zh-usex|他 經常 做 '''惡'''，這 回 終於 犯事 了|He often does '''bad things''' and has finally been caught.}}
+#: {{zh-usex|他 經常 做 '''惡'''，這 回 終於 犯事 了。|He often does '''bad things''' and has finally been caught.}}
 
 ====Antonyms====
 * {{zh-l|善}}
