--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -12,7 +12,9 @@
 * {{rhymes|ɪdʒ|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|brigge}}, from {{etyl|ang|en}} {{m|ang|brycġ||bridge}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*brugjō}}, {{m|gem-pro|*brugjǭ||bridge}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰerw-}}, {{m|ine-pro|*bʰrēw-||wooden flooring, decking, bridge}}. Cognate with {{etyl|sco|-}} {{m|sco|brig}}, {{m|sco|brigg}}, {{m|sco|breeg||bridge}}, {{etyl|stq|-}} {{m|stq|Brääch||bridge}}, West Frisian {{m|fy|brêge||bridge}}, Dutch {{m|nl|brug||bridge}}, German {{m|de|Brücke||bridge}}, {{etyl|da|-}} {{m|da|bro||bridge}} and {{m|da|brygge||wharf}}, {{etyl|is|-}} {{m|is|brú||bridge}} and {{m|is|brygga||pier}}, Gaulish {{m|cel-gau||bríva|bridge}}, Old Church Slavonic {{m|cu|бръвъно||beam|sc=Cyrs}} and Russian {{m|ru|бревно́||log}}.
+From {{etyl|enm|en}} {{m|enm|brigge}}, from {{etyl|ang|en}} {{m|ang|brycġ||bridge}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*brugjō}}, {{m|gem-pro|*brugjǭ||bridge}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰerw-}}, {{m|ine-pro|*bʰrēw-||wooden flooring, decking, bridge}}.
+
+Cognate with {{etyl|sco|-}} {{m|sco|brig}}, {{m|sco|brigg}}, {{m|sco|breeg||bridge}}, {{etyl|stq|-}} {{m|stq|Brääch||bridge}}, West Frisian {{m|fy|brêge||bridge}}, Dutch {{m|nl|brug||bridge}}, German {{m|de|Brücke||bridge}}, {{etyl|da|-}} {{m|da|bro||bridge}} and {{m|da|brygge||wharf}}, {{etyl|is|-}} {{m|is|brú||bridge}} and {{m|is|brygga||pier}}, Gaulish {{m|cel-gau||bríva|bridge}}, {{etyl|sh|-}} {{m|sh|brv||bridge, crossbar}}, Old Church Slavonic {{m|cu|бръвъно||beam|sc=Cyrs}} and Russian {{m|ru|бревно́||log}}.
 
 The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang|brycġian||to bridge, make a causeway, pave}}, derived from the noun. Cognate with {{etyl|nl|-}} {{m|nl|bruggen||to bridge}}, {{etyl|gml|-}} {{m|gml|bruggen||to bridge}}, {{etyl|goh|-}} {{m|goh|bruccōn||to bridge}} (whence Modern German {{m|de|brücken}}).
 
