--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -89,7 +89,8 @@
 * Norman: {{t|nrf|Rouoyaume Unni|m|alt=Le Rouoyaume Unni}}
 * North Frisian: {{t|frr|Feriind Kiningrik}}
 * Northern Sami: {{t|se|Ovttastuvvan gonagasriika}}
-* Norwegian: {{t|no|Det forente kongerike Storbritannia og Nord-Irland}}
+* Norwegian: 
+*: Bokmål: {{t|no|Det forente kongerike Storbritannia og Nord-Irland}}
 *: Nynorsk: {{t|nn|Det sameinte kongeriket Storbritannia og Nord-Irland}}
 * Occitan: {{t+|oc|Reialme Unit|m}}
 * Ossetian: {{t|os|Иугонд Паддзахад}}
