--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -340,7 +340,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Burmese: {{t+|my|ဖမ်း|sc=Mymr}}
 * Chinese:
 *: Cantonese: {{t|yue|捉到|tr=zuk1 dou2|sc=Hani}}
-*: Mandarin: {{t+|cmn|捉|zhuō}}; {{t+|cmn|捕獲|sc=Hani}}, {{t+|cmn|捕获|tr=bǔhuò|sc=Hani}}, {{t+|cmn|捕|tr=bǔ|sc=Hani}}
+*: Mandarin: {{t+|cmn|捉|tr=zhuō}}; {{t+|cmn|捕獲|sc=Hani}}, {{t+|cmn|捕获|tr=bǔhuò|sc=Hani}}, {{t+|cmn|捕|tr=bǔ|sc=Hani}}
 *: Min Nan: {{t|nan|liah8|sc=Hani}}
 * French: {{t+|fr|attraper}}, {{t+|fr|prendre}}
 * Friulian: {{t|fur|cjapâ}}
