--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -12,7 +12,7 @@
 ===Proper noun===
 {{en-proper noun|head=[[united|United]] [[kingdom|Kingdom]]}}
 
-# A [[kingdom]] and [[sovereign]] [[state]] in [[Europe]] comprising the four countries of [[England]], [[Scotland]] and [[Wales]] in the island of [[Great Britain]], and [[Northern Ireland]] in the island of [[Ireland]]. Since 1922.
+# A [[kingdom]] and [[sovereign]] [[state]] in [[Western Europe]] comprising the four countries of [[England]], [[Scotland]] and [[Wales]] in the island of [[Great Britain]], and [[Northern Ireland]] in the island of [[Ireland]]. Since 1922. Capital: [[London]].
 # {{label|en|historical}} The [[United Kingdom of Great Britain and Ireland]] (1801–1922)
 # {{label|en|historical|informal}} The [[Kingdom of Great Britain]] (1707-1801)
 
