--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -18,7 +18,7 @@
 
 ====Synonyms====
 * {{sense|Sense 1}} {{l|en|United Kingdom of Great Britain and Northern Ireland}} {{qualifier|official name}}, {{l|en|UK}} or {{l|en|U.K.}} {{qualifier|abbreviation}}, {{l|en|Great Britain}} {{qualifier|loosely}}, {{l|en|Britain}} {{qualifier|loosely}}, {{l|en|England}} {{qualifier|non-standard; sometimes offensive}}.
-* {{sense|Sense 3}} {{l|en|Great Britain}} {{qualifier|official name}}
+* {{sense|Sense 3}} {{l|en|Great Britain}} {{qualifier|official name}}, {{l|en|United Kingdom of Great Britain}} {{qualifier|modern use}}
 
 ====Translations====
 {{trans-top-also|Kingdom in Europe|Great Britain}}
