--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -227,7 +227,7 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 ===Derived terms===
 * {{vern|bastard saffron}} ({{taxlink|Cassine peragua|species|noshow=1}})
 * {{l|en|dyer's saffron}}
-* {{l|en|meadow saffron}} ({{taxlink|Colchicum autumnale|species|noshow=1}})
+* {{l|en|meadow saffron}} (''[[Colchicum autumnale]]'')
 * {{vern|saffron finch}} ({{taxlink|Sicalis flaveola|species|noshow=1}})
 * {{l|en|Saffron Walden}}
 * {{l|en|saffron wood}}
