--- a/en/慈/慈.15707.wikitext
+++ b/en/慈/慈.15707.wikitext
@@ -3,8 +3,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=80333|canj=TVIP|ids=⿱兹心}}
 
-# [[kind]], [[charitable]], [[benevolent]]
-
 ====References====
 * {{Han ref|kx=0397.250|dkj=10980|dj=0736.190|hdz=42324.030|uh=6148|ud=24904|bh=B74F|bd=46927}}
 
@@ -28,10 +26,10 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# [[kind]], [[charitable]], [[benevolent]]
 
 ====Compounds====
-* {{zh-l|慈菇}}, {{zh-l|慈姑}}
+{{zh-der|慈菇|慈姑|仁慈|令慈|先慈|大慈大悲|大發慈悲|孝子慈孫|孝慈|宅心仁慈|家慈|布慈|心慈面軟|慈制|慈命|慈和|慈善|慈善事業|慈善家|慈善機構|慈孫孝子|慈安太后|慈幃|慈幼|慈心|慈恩宗|慈恩寺|慈悲|慈悲殺人|慈悲為懷|慈悲為本|慈愛|慈憫|慈故能勇|慈暉|慈母|慈湖|慈濟大學|慈烏|慈烏反哺|慈烏返哺|慈父|慈眉善目|慈石|慈祥|慈禧太后|慈竹|慈航|慈航普渡|慈藹|慈訓|慈誨|慈雲|慈顏|手滑心慈|敏練慈愷|敬老慈幼|李慈銘|母慈子孝|濟慈|父慈子孝|臉軟心慈|葉慈}}
 
 ----
 
