--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -67,7 +67,8 @@
 ===Kanji===
 {{ja-kanji|grade=4|rs=人09}}
 
-# {{defn|lang=ja|sort=人09}}
+# [[strong]], [[robust]], [[healthy]]
+# [[strength]]
 
 ====Readings====
 * {{ja-readings|goon=[[ごん]] (gon) {{non-joyo-reading}}|kanon=[[けん]] (ken)|kun=[[すこやか]] (sukoyaka), [[たけし]] (takeshi), [[したたか]] (shitataka)}}
