--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -5,9 +5,6 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=68011|canj=AOS|ids=⿰日乍}}
 
-# [[yesterday]]
-# in [[former]] [[time]]s, [[past]]
-
 ====References====
 * {{Han ref|kx=0493.140|dkj=13847|dj=0857.020|hdz=21502.020|uh=6628|ud=26152|bh=AC51|bd=44113}}
 
@@ -20,14 +17,22 @@
 {{zh-pron
 |m=zuó
 |c=zok3,zok6
+|md=sŏ̤h
+|w=5zoq,3zo
 |mc=y
 |oc=y
 |ma=
-|cat=n
+|cat=n,a
 }}
 
 ===Definitions===
-# {{rfdef|lang=zh}}
+{{zh-hanzi}}
+
+# [[yesterday]]
+# in [[former]] [[time]]s, [[past]]
+
+===Compounds===
+{{zh-der|昨暝|昨昏|一昨|今是昨非|昨來|昨兒|昨前|昨夜|昨天|昨日|昨晚|昨非今是}}
 
 ----
 
