--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -21,7 +21,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 #* '''1671–1693''': Rev. Thomas Jolly, ''private notebook''; printed in:
 #* '''1895''', Henry Fishwick (editor), ''The Note Book of the Rev. Thomas Jolly: A.D. 1671–1693. Extracts from the Church Books of Altham and Wymondhouses, 1649–1725. And an Account of the Jolly Family of Standish, Gorton, and Altham'', [http://books.google.co.uk/books?ei=L-9bSa-FKYuiyAS3xqmCDA&id=TA71Bp2xMq0C&dq=%22of+christ+and+his+gospell%2C%22&q=zenith&pgis=1#search_anchor page 44]
 #*: In this 10th m. appeared that prodigious Comett the tayl whereof was like the blade of a double edged sword, and reached almost from the horizon to the '''zenith'''.
-#* '''1938''', [[w:Xavier Herbert|Xavier Herbert]], ''[[w:Capricornia (novel)|Capricornia]]'', New York: D. Appleton-Century, 1943, Chapter X, p. 180, [https://archive.org/details/capricornianovel00herb]
+#* '''1938''', [[w:Xavier Herbert|Xavier Herbert]], ''[[w:Capricornia (novel)|Capricornia]]'', New York: D. Appleton-Century, 1943, Chapter XI, p. 180, [https://archive.org/details/capricornianovel00herb]
 #*: In the east a pillar of cloud reared from horizon to '''zenith''', with a kind of arm outstretched like a threatening colossus. 
 # {{label|en|astronomy}} The [[highest]] point in the sky reached by a [[celestial body]].
 #* '''1719-''' [[w:Daniel Defoe|Daniel Defoe]], ''[[w:Robinson Crusoe|Robinson Crusoe]]''
