--- a/en/倣/倣.11032.wikitext
+++ b/en/倣/倣.11032.wikitext
@@ -11,12 +11,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms|s=仿}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=fong2}}
+===Pronunciation===
+{{zh-pron
+|m=fǎng
+|c=fong2
+|h=pfs=
+|md=
+|mn=
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=人08}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -38,15 +52,6 @@
 {{ko-hanja|hangeul=방|rv=bang|mr=pang}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[fǎng]] ([[fang3]])|wg=fang<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
 
 [[fr:倣]]
 [[ko:倣]]
