--- a/en/昇/昇.16943.wikitext
+++ b/en/昇/昇.16943.wikitext
@@ -13,12 +13,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[sing1]]|y=sing1}}
+===Pronunciation===
+{{zh-pron
+|m=shēng
+|c=sing1
+|h=pfs=
+|md=
+|mn=
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=日04}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -50,15 +64,6 @@
 {{ko-hanja|hangeul=승|eumhun=|rv=seung|mr=sŭng|y=sung}}
 
 # {{defn|lang=ko|sort=日04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[shēng]] ([[sheng1]])|wg=sheng<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
 
 ----
 
