--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -1,5 +1,5 @@
-{{stroke order|strokes=7}}
 ==Translingual==
+{{stroke order|strokes=7}}
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=47120|canj=GPIM,GPMM|ids=⿰土匀}}
@@ -13,12 +13,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=gwan1|y=gwan1}}
+===Pronunciation===
+{{zh-pron
+|m=jūn
+|c=gwan1,kwan1
+|h=pfs=kiûn
+|md=
+|mn=
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土04}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -84,18 +98,6 @@
 {{ko-hanja|hangeul=균|rv=gyun|mr=kyun}}
 
 # {{defn|lang=ko|sort=土04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jūn]] ([[jun1]])|wg=chün<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
-
-====Pronunciation====
-* {{audio|Zh-jun.ogg|Audio|lang=cmn}}
 
 ----
 
