--- a/en/址/址.12995.wikitext
+++ b/en/址/址.12995.wikitext
@@ -12,12 +12,26 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zi2]]|y=ji2}}
+===Pronunciation===
+{{zh-pron
+|m=zhǐ
+|c=zi2
+|h=pfs=
+|md=
+|mn=
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
 
-# {{defn|lang=yue|sort=土04}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -42,15 +56,6 @@
 {{ko-hanja|hangeul=지|rv=ji|mr=chi}}
 
 # {{defn|lang=ko|sort=土04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhǐ]] ([[zhi3]])|wg=chih<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
 
 ----
 
