--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -164,6 +164,7 @@
 * Tatar: {{t|tt|Америка Кушма Штатлары|sc=Cyrl}}
 * Telugu: {{t+|te|అమెరికా సంయుక్త రాష్ట్రాలు|sc=Telu}}
 * Thai: {{t+|th|สหรัฐอเมริกา}}, {{t|th|อเมริกา}}
+* Tibetan: {{t|bo|ཨ་མེ་རི་ཁ་རྒྱལ་ཕྲན་མཉམ་འབྲེལ་རྒྱལ་ཁབ|sc=Tibt}}
 * Tongan: {{t|to|Puleʻanga Fakatahataha ʻAmelika}}
 * Turkish: {{t+|tr|Amerika Birleşik Devletleri}}, {{t|tr|Birleşik Devletler}}, {{t+|tr|ABD}}, {{t+|tr|Amerika}}
 * Turkmen: {{t|tk|Amerikanyň Birleşen Ştatlary}}
