--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -26,12 +26,12 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 #: ''the '''branches''' of a hyperbola''
 # A [[location]] of an [[organization]] with several locations.
 #: ''Our main '''branch''' is downtown, and we have '''branches''' in all major suburbs.''
-# A line of family descent, in distinction from some other line or lines from the same stock; any descendant in such a line.
+# {{senseid|en|family descent}} A line of family descent, in distinction from some other line or lines from the same stock; any descendant in such a line.
 #: ''the English '''branch''' of a family''
 #* Carew
 #*: his father, a younger '''branch''' of the ancient stock
 # {{lb|en|Mormonism}} A local [[congregation]] of the [[LDS]] Church that is not large enough to form a [[ward]]; see [[w:Ward (LDS Church)|Wikipedia article on ward in LDS church]].
-# An area in business or of knowledge, research.
+# {{senseid|en|area}} An area in business or of knowledge, research.
 #* {{quote-magazine|date=2012-01
 |author=Robert L. Dorit
 |title=Rereading Darwin
