--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -26,6 +26,7 @@ Originally {{och-l|曐}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|
 |md=sĭng
 |mn=xm,qz,lk,sx,tp,km,mg,hc:chhiⁿ/zz,yl,tn,kh,tc:chheⁿ/seng
 |mn_note=chhiⁿ/chheⁿ - vernacular; seng - literary
+|mn-t=cên1
 |w=1xin
 |mc=y
 |oc=y
