--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -269,6 +269,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 {{trans-bottom}}
 
 {{trans-top|to be able to communicate in a language}}
+* Arabic: {{t|ar|تَكَلَّمَ|sc=fa-Arab}}
 * Catalan: {{t+|ca|parlar}}
 * Chinese:
 *: Cantonese: {{t+|cmn|識講|tr=sik1 gong2|sc=Hani}}
