--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -422,7 +422,19 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 {{trans-bottom}}
 
 {{trans-top|to contract a disease or illness}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
+* Dutch: {{t-needed|nl}}
+* Esperanto: {{t-needed|eo}}
+* Finnish: {{t-needed|fi}}
+* French: {{t-needed|fr}}
 {{trans-mid}}
+* German: {{t-needed|de}}
+* Japanese: {{t-needed|ja}}
+* Khmer: {{t-needed|km}}
+* Russian: {{t-needed|ru}}
+* Spanish: {{t-needed|es}}
+* Thai: {{t-needed|th}}
 {{trans-bottom}}
 
 {{trans-top|to perceive and understand {{jump|t|perceive and understand}}}}
