--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -33,17 +33,22 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 
 ====Translations====
 {{trans-top|person keeping records and handling clerical work}}
+* Albanian: {{t+|sq|sekretar|m}}
 * Arabic: {{t|ar|سِكْرِتِير|m|tr=sekretēr}}, {{t+|ar|سِكْرِتِيرَة|f|tr=sekretēra}}
 * Armenian: {{t+|hy|քարտուղար}}, {{qualifier|female}} {{t+|hy|քարտուղարուհի}}
+* Azeri: {{t|az|katib}}, {{t|az|katibə}}
 * Bashkir: {{t|ba|сәркәтип|sc=Cyrl}}
 * Basque: {{t|eu|idazkari}}
+* Belarusian: {{t|be|сакрата́р|m|sc=Cyrl}}, {{t|be|сакрата́рка|f|sc=Cyrl}}
 * Bulgarian: {{t+|bg|секрета́р|m|tr=sekretár}}, {{t|bg|секрета́рка|f|tr=sekretárka}}
 * Chechen: {{t|ce|йозанча|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t+|cmn|秘書|sc=Hani}}, {{t+|cmn|秘书|tr=mìshū|sc=Hani}}
 * Czech: {{t|cs|sekretář|m}}, {{t+|cs|sekretářka|f}}
+* Danish: {{t|da|sekretær|c}}
 * Dutch: {{t+|nl|secretaresse|f}}
 * Esperanto: {{t|eo|sekretario}}
+* Estonian: {{t|et|sekretär}}
 * Finnish: {{t+|fi|sihteeri}}
 * French: {{t+|fr|secrétaire|m|f}}
 * Georgian: {{t|ka|მდივანი}}
@@ -51,22 +56,31 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Greek: {{t+|el|γραμματέας|m|f}}
 * Hebrew: {{t|he|מזכיר|m|tr=mazkir}}
 * Hungarian: {{t+|hu|titkár}}, {{t+|hu|titkárnő}}
+* Icelandic: {{t|is|ritari|m}}
 * Ido: {{t+|io|sekretario}}
+* Indonesian: {{t+|id|sekretaris}}
 * Interlingua: {{t|ia|secretaria|f}}
 * Irish: {{t|ga|rúnaí|m}}
 * Italian: {{t+|it|segretario|m}}
 * Japanese: {{t|ja|秘書|tr=ひしょ, hisho}}
+* Kazakh: {{t|kk|хатшы|sc=Cyrl}}
 * Khmer: {{t+|km|ស្មៀន|sc=Khmr|tr=smien}}
 * Korean: {{t+|ko|비서|sc=Kore}} ({{t+|ko|秘書|sc=Kore}})
 * Kurdish:
 *: Kurmanji: {{t+|kmr|katib}}, {{t+|kmr|sekreter}}
 *: Sorani: {{t|ku|سکرتێر|tr=sikirtaer|sc=ku-Arab}}
 {{trans-mid}}
+* Kyrgyz: {{t|ky|катчы|sc=Cyrl}}
 * Lao: {{t|lo|ເລຂານຸການ|sc=Laoo}}
 * Latin: {{t|la|sēcrētārius|m}} {{qualifier|Mediaeval}}, {{t|la|librarius}}, {{t|la|librariolus|m}}, {{t|la|librarius|m}}
+* Latvian: {{t|lv|sekretārs|m}}
+* Lithuanian: {{t+|lt|sekretorius|m}}
+* Macedonian: {{t|mk|секретар|m|sc=Cyrl}}, {{t|mk|секретарка|f|sc=Cyrl}}
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
 * Manx: {{t|gv|screeudeyr|m}}
 * Navajo: {{t|nv|naaltsoos ííłʼíní}}
+* Norwegian:
+*: Bokmål: {{t+|nb|sekretær|m}}
 * Persian: {{t+|fa|سکرتر|tr=sekreter|sc=fa-Arab}}
 * Polish: {{t+|pl|sekretarz|m}}, {{t+|pl|sekretarka|f}}
 * Portuguese: {{t+|pt|secretário|m}}, {{t+|pt|secretária|f}}
@@ -74,17 +88,21 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * Russian: {{t+|ru|секрета́рь|m|f}}, {{t+|ru|секрета́рша|f}} {{qualifier|colloquial for female}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}, {{t|gd|clèireach|m}}
 * Serbo-Croatian: {{t+|sh|tȃjnīk|m}}, {{t+|sh|tȃjnica|f}}
+* Slovak: {{t|sk|sekretár|m}}, {{t|sk|sekretárka|f}}
 * Slovene: {{t|sl|sekretar|m}}
 * Southern Altai: {{t|alt|качы|tr=kaçı|sc=Cyrl}}
 * Spanish: {{t+|es|secretario|m}}, {{t|es|secretaria|f}}
 * Swahili: {{t+|sw|karani}}
 * Swedish: {{t+|sv|sekreterare|c}}
 * Tagalog: {{t|tl|sekretarya}}, {{t|tl|kalihim}}
+* Tajik: {{t|tg|котиб}}, {{t|tg|котиба}}
 * Telugu: {{t+|te|కార్యదర్శి|tr=kaaryadarSi|sc=Telu}}, {{t|te|సహాయకుడు|tr=sahaayakuDu|sc=Telu}}
 * Thai: {{t|th|เลขานุการ|sc=Thai}}
 * Tok Pisin: {{t|tpi|sekreteri}}
 * Turkish: {{t+|tr|sekreter}}
-* Vietnamese: {{t+|vi|thư ký}}
+* Ukrainian: {{t|uk|секрета́р|m|sc=Cyrl}}, {{t|uk|секрета́рка|f|sc=Cyrl}}
+* Uzbek: {{t+|uz|sekretar}}, {{t+|uz|kotib}}
+* Vietnamese: {{t+|vi|thư ký}}, {{t+|vi|bí thư}}
 * Volapük: {{t+|vo|sekretan}}
 * Welsh: {{t|cy|ysgrifenydd|m}}, {{t+|cy|ysgrifenyddes|f}}
 {{trans-bottom}}
